Scenario and useCases added.