@@ -1,8 +1,7 @@
 package ru.kuznetsov.shop.generator.scenario.entity.address;
 
-import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
-import ru.kuznetsov.shop.generator.scenario.Scenario;
+import ru.kuznetsov.shop.generator.scenario.AbstractScenario;
 import ru.kuznetsov.shop.generator.service.UseCaseService;
 import ru.kuznetsov.shop.generator.usecase.auth.GetTokenUseCase;
 import ru.kuznetsov.shop.generator.usecase.entity.address.GetAllAddressUseCase;
@@ -12,14 +11,15 @@ import static ru.kuznetsov.shop.generator.common.ConstValues.ADMIN_LOGIN;
 import static ru.kuznetsov.shop.generator.common.ConstValues.ADMIN_PASSWORD;
 
 @Component
-@RequiredArgsConstructor
-public class GetAllAddressScenario implements Scenario {
+public class GetAllAddressScenario extends AbstractScenario {
 
-    private final UseCaseService useCaseService;
+    protected GetAllAddressScenario(UseCaseService useCaseService) {
+        super(useCaseService);
+    }
 
     @Override
     public void run() {
-        TokenDto token = useCaseService.runUseCase(new GetTokenUseCase(ADMIN_LOGIN, ADMIN_PASSWORD)).getFirst();
-        useCaseService.runUseCase(new GetAllAddressUseCase(token.getToken()));
+        TokenDto token = runUseCaseWithReturn(new GetTokenUseCase(ADMIN_LOGIN, ADMIN_PASSWORD)).get(0);
+        runUseCase(new GetAllAddressUseCase(token.getToken()));
     }
 }
